# Athena

./: .dockerignore  .env.example  .gitignore  .prospector.yaml  Caddyfile  Dockerfile  README.md  athena-docker.sh  athena-server-cli  athena-workspace.code-workspace  athena.service  docker-compose.cofee.yml  docker-compose.override.yml  docker-compose.playground.prod.yml  docker-compose.prod.yml  docker-compose.yml  install_modules.py  lint_modules.py  lock_modules.py  modules.docker.ini  postgres-init.sql  pyproject.toml  requirements.txt  shields.json  start_docker.py  start_docker.sh  test_modules.py
assessment_module_manager/: .dockerignore  .env  Dockerfile  __main__.py  deployments.docker.ini  deployments.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  modules.docker.ini  modules.ini  pyproject.toml
assessment_module_manager/assessment_module_manager/: __main__.py  app.py  authenticate.py  env.py  health.py  logger.py  module.py  module_list.py  module_resolver.py
assessment_module_manager/assessment_module_manager/deployment/: __init__.py  deployment.py  list_deployments.py
assessment_module_manager/assessment_module_manager/endpoints/: __init__.py  consume_feedback_endpoint.py  consume_submissions_endpoint.py  feedback_suggestions_endpoint.py  health.py  health_endpoint.py  module.py  modules_endpoint.py  modules_proxy_endpoint.py  select_submission.py
assessment_module_manager/assessment_module_manager/module/: __init__.py  available_module_enum.py  list_modules.py  module.py  request_to_module.py  resolve_module.py
athena/: Dockerfile  __init__.py  deployments.ini  feedback.py  feedback_consumer.py  feedback_provider.py  pyproject.toml  storage.py  submission.py  submissions_consumer.py  suggestion.py
athena/athena/: __init__.py  app.py  authenticate.py  contextvars.py  database.py  default_values.py  discovery.py  endpoints.py  env.py  experiment.py  feedback_consumer.py  feedback_provider.py  logger.py  metadata.py  modeling.py  modelling.py  module_config.py  programming.py  submission_selector.py  submissions_consumer.py  text.py
athena/athena/common/: feedback_consumer.py  feedback_provider.py  submission_selector.py  submissions_consumer.py
athena/athena/helpers/: __init__.py  deployment.py  list_deployments.py  programming_exercise.py  programming_submission_zip.py
athena/athena/models/: __init__.py  big_integer_with_autoincrement.py  db_exercise.py  db_feedback.py  db_graded_feedback.py  db_graded_modelling_feedback.py  db_graded_programming_feedback.py  db_graded_text_feedback.py  db_modeling_exercise.py  db_modeling_feedback.py  db_modeling_structured_grading_criterion.py  db_modeling_submission.py  db_modelling_exercise.py  db_modelling_feedback.py  db_modelling_submission.py  db_non_graded_feedback.py  db_non_graded_programming_feedback.py  db_programming_exercise.py  db_programming_feedback.py  db_programming_submission.py  db_structured_grading_criterion.py  db_structured_grading_instruction.py  db_submission.py  db_text_exercise.py  db_text_feedback.py  db_text_submission.py  exercise.py  feedback.py  model.py  submission.py
athena/athena/programming/: __init__.py
athena/athena/schemas/: __init__.py  deployment.py  exercise.py  exercise_type.py  feedback.py  schema.py  (+22 more)
athena/models/: __init__.py  exercise.py  feedback.py
athena/storage/: __init__.py
log_viewer/: Dockerfile  pyproject.toml
log_viewer/log_viewer/: __main__.py
log_viewer/static/: index.html
module_cofee/: .dockerignore  .env  .local.env  Dockerfile  Makefile  README.md  docker-compose.yml  module.conf  node_config.docker.yml  pyproject.toml  traefik.docker.yml
module_cofee/module_cofee/: .gitignore  __main__.py  adapter.py  link_feedback_to_block.py  process_results.py  suggest_feedback.py  text_block.py
module_example/: .env  Dockerfile  __main__.py  consume_feedback.py  consume_submissions.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  feedback.py  generate_feedback.py  provide_feedback.py  pyproject.toml  receive_feedback.py  receive_submissions.py  requirements.txt  submission.py
module_example/module_example/: __main__.py
module_modeling_llm/: README.md  module.conf  pyproject.toml
module_modeling_llm/module_modeling_llm/: __main__.py  config.py  generate_suggestions.py
module_programming_apted/: Dockerfile  README.md  pyproject.toml
module_programming_apted/module_programming_apted/: __main__.py
module_programming_code_embedding/: Dockerfile  module.conf  pyproject.toml
module_programming_code_embedding/module_programming_code_embedding/: __main__.py
module_programming_llm/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  module.conf  pyproject.toml
module_programming_llm/module_programming_llm/: __init__.py  __main__.py  config.py  feedback_provider_registry.py  generate_graded_suggestions_by_file.py  generate_non_graded_suggestions_by_file.py  generate_suggestions_by_file.py  generate_summary_by_file.py  llm_feedback.py  split_grading_instructions_by_file.py  split_problem_statement_by_file.py  utils.py
module_programming_themisml/: .gitignore  Dockerfile  module.conf  pyproject.toml
module_programming_themisml/module_programming_themisml/: __main__.py
module_programming_winnowing/: Dockerfile  module.conf  pyproject.toml
module_programming_winnowing/module_programming_winnowing/: __main__.py
module_text_cofee/: .dockerignore  Dockerfile  Makefile  README.md  module.conf  pyproject.toml  traefik.docker.yml
module_text_cofee/module_text_cofee/: __main__.py  adapter.py  information_gain.py  link_feedback_to_block.py  process_results.py  suggest_feedback.py
module_text_llm/: .env.example  Dockerfile  README.md  module.conf  pyproject.toml
module_text_llm/module_text_llm/: __main__.py  config.py  evaluation.py  generate_evaluation.py  generate_suggestions.py  generate_ungraded_feedback.py  suggest_feedback_basic.py
modules/llm_core/: Dockerfile  pyproject.toml
shared_llm/: Dockerfile  pyproject.toml
shared_llm/shared_llm/: .env.example
(+851 files in other folders)
