[tool.poetry]
name = "Athena"
version = "1.0.0"
description = "This is a helper module for easier development of Athena modules. It provides communication functionality with the Assessment Module manager, as well as helper functions for storage."
authors = ["Paul Schwind <paul.schwind@tum.de>"]

[tool.poetry.scripts]
lint_all = "lint_modules:main"
install_all = "install_modules:main"
lock_all = "lock_modules:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"