[tool.poetry]
name = "assessment-module-manager"
version = "0.1.0"
description = "The interface between the Athena modules and external systems. It manages, which modules will be used for incoming submissions and feedback."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
athena = {path = "../athena", develop = true}

[tool.poetry.group.docker.dependencies]
athena = {file = "athena-1.0.0-py3-none-any.whl"}

[tool.poetry.scripts]
assessment_module_manager = "assessment_module_manager.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
