[tool.poetry]
name = "log-viewer"
version = "0.1.0"
description = "Shows the logs of the assessment module manager and all modules in a web interface."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.109.1"
uvicorn = "^0.23.0"
docker = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
