[tool.poetry]
name = "module_cofee"
version = "0.1.0"
description = "A system to support (semi-)automated assessment of textual exercises. Adaption of Athena CoFee by Jan-Philip Bernius."
authors = ["Paul Schwind <git@pschwind.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
athena = {path = "../athena", develop = true}
fastapi = "^0.95.1"
protobuf = "^4.22.4"
pyyaml = "^6.0"
requests = "^2.30.0"
numpy = "^1.24.3"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
