[tool.poetry]
name = "module_cofee"
version = "0.1.0"
description = "An adapter to the original [Athena](https://github.com/ls1intum/Athena), an implementation of CoFee (text exercise assessment)."
authors = ["Paul Schwind <git@pschwind.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
athena = {path = "../athena", develop = true}

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
