[tool.poetry]
name = "module_example"
version = "0.1.0"
description = "An example module to demonstrate how to create new modules for Athena."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

#[tool.poetry.dev-dependencies]
#athena = {path = "../athena", develop = true}

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
