[tool.poetry]
name = "module_modeling_llm"
version = "0.1.0"
description = "Modeling assessment LLM module."
authors = ["Matthias Lehner <ga59bip@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../athena", develop = true }
openai = "^1.42.0"
langchain = "^0.2.15"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
gitpython = "^3.1.41"
replicate = "^0.11.0"
tiktoken = "^0.7.0"
langsmith = "^0.1.106"
langchain-openai = "^0.1.23"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
