[tool.poetry]
name = "module_programming_apted"
version = "0.1.0"
description = "Programming assessment AP-TED module."
authors = ["Marlon Bucciarelli <marlon.bucciarelli@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
# athena = { path = "../athena", develop = true }
athena = { git = "https://github.com/ls1intum/Athena.git", rev = "ccd00cf8346e76738a66e7f4cf04c84aa4cb4378", subdirectory = "athena"}
apted = "^1.0.3"
antlr4-python3-runtime = "^4.13.1"
javalang = {git = "https://github.com/c2nes/javalang"}
pydantic = "1.10.17"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.8"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
