[tool.poetry]
name = "module_programming_llm"
version = "0.1.0"
description = "Programming assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = {path = "../athena", develop = true}
openai = "^0.27.8"
langchain = "^0.1.0"
gitpython = "^3.1.41"
tiktoken = "^0.4.0"
promptlayer = "^0.1.85"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
replicate = "^0.11.0"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
