[tool.poetry]
name = "module_programming_llm"
version = "0.1.0"
description = "Programming assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
# athena = { path = "../athena", develop = true }
athena = { git = "https://github.com/ls1intum/Athena.git", rev = "ccd00cf8346e76738a66e7f4cf04c84aa4cb4378", subdirectory = "athena"}
openai = "^1.30.5"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
gitpython = "^3.1.41"
tiktoken = "^0.7"
promptlayer = "^0.1.85"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
replicate = "^0.11.0"

pydantic = "1.10.17"
prospector = "^1.10.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.8"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
