[tool.poetry]
name = "module_programming_themisml"
version = "0.1.0"
description = "A module generating feedback suggestions somewhat similar to CoFee, but for programming submissions and by using CodeBERT."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
athena = {path = "../athena", develop = true}
antlr4-python3-runtime = "^4.13.1"
code-bert-score = "^0.4.1"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-2.1.0%2Bcpu-cp311-cp311-linux_x86_64.whl", platform = "linux", python = ">=3.11 <3.12"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.1.0-cp311-none-macosx_11_0_arm64.whl", platform = "darwin", python = ">=3.11 <3.12"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.1.0%2Bcpu-cp311-cp311-win_amd64.whl", platform = "win32", python = ">=3.11 <3.12"}
]

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
