[tool.poetry]
name = "module_text_cofee"
version = "0.1.0"
description = "An adapter to the original [Athena](https://github.com/ls1intum/Athena), an implementation of CoFee (text exercise assessment)."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.23.0"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]
athena = {path = "../athena", develop = true}

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
