[tool.poetry]
name = "module_text_llm"
version = "0.1.0"
description = "Text assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = {path = "../athena", develop = true}
openai = "1.36.0"
langchain = "0.2.8"
langchain-openai = "0.1.16"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
gitpython = "^3.1.41"
tiktoken = "^0.7.0"
langchain-community="0.2.7"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
