[tool.poetry]
name = "module_text_llm"
version = "0.1.0"
description = "Text assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
athena = {path = "../athena", develop = true}
gitpython = "3.1.41"
langchain = "0.2.11"
langchain-community="0.2.10"
langchain-openai = "0.1.19"
nltk = "3.8.1"
openai = "1.37.1"
python = "3.11.*"
python-dotenv = "1.0.0"
tiktoken = "0.7.0"
jupyter = "^1.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
