[tool.poetry]
name = "shared_llm"
version = "1.0.0"
description = "Shared Langchain Middleware"
authors = ["Me"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
openai = "^1.30.5"
langchain = "0.2.6"
langchain-openai = "^0.1.7"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
gitpython = "^3.1.41"
tiktoken = "^0.7"
langchain_community = "^0.2.0"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
