[tool.poetry]
name = "module_text_llm"
version = "0.1.0"
description = "Text assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = {path = "../athena", develop = true}
replicate = "^0.11.0"
langsmith = "^0.0.63"
gitpython = "3.1.41"
langchain = "0.2.11"
langchain-community="0.2.10"
langchain-openai = "0.1.19"
nltk = "3.8.1"
openai = "1.37.1"
python-dotenv = "1.0.0"
tiktoken = "0.7.0"
prospector = "^1.10.2"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
