[tool.poetry]
name = "module_text_llm"
version = "0.1.0"
description = "Text assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../../../athena", develop = true }
# athena = { git = "https://github.com/ls1intum/Athena.git", rev = "2da2d33", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
langsmith = ">=0.1.0,<0.2.0"
gitpython = "3.1.41"
nltk = "3.8.1"
python-dotenv = "1.0.0"
tiktoken = "0.7.0"

[tool.poetry.dev-dependencies]
pydantic = "1.10.17"
prospector = "^1.10.2"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
